--- a/CIT-WEB/css/style.css
+++ b/CIT-WEB/css/style.css
@@ -63,15 +63,50 @@ header {
 }
 
 #content {
-    font-size: 120%;
     background-color: rgba(169, 169, 169, 0.253);
     background-clip:content-box;
     padding: 1%;
     color: white;
-    height: 500px;
     border-radius: 30px;
 }
 
-#nav-mobile {
+#promos {
+    font-size: 120%;
+    padding: 1%;
+    color: white;
+    height: 500px;
+    border-radius: 30px;
+    text-align: center;
+    
+}
+
+.paypal-button {
+    color: white;
+    background-color: rgb(3,94,167);
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    margin-right: 0px;
+    padding: 2px;
+    width: 48%;
+    height: 50%;
+    text-shadow:black 2px 2px 2px;
+
+}
+
+.skrill-button {
+    color: white;
+    background-color: rgb(94, 40, 94);
+    margin-left: 0px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    padding: 2px;
+    width: 48%;
+    height: 50%;
+    text-shadow:black 2px 2px 2px;
+
+}
+a {
+    text-decoration-style: none;
+    text-decoration-line: none;
 
 }
